# revelation-user

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  codecov.yml  deny.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: bind.rs  dto.rs  entiry.rs  entity.rs  extend.rs  extract.rs  gender.rs  lib.rs  notification.rs  permissions.rs  ports.rs  profile.rs  projections.rs  role.rs
src/dto/: bind.rs  create.rs  mod.rs  update.rs
src/entity/: claims.rs  mod.rs  user.rs
src/extract/: actix_extract.rs  axum_extract.rs  mod.rs
src/ports/: mod.rs
src/projections/: auth.rs  public.rs
