[package]
name = "revelation-user"
version = "0.1.0"
edition = "2024"
authors = ["Revelation Team"]
description = "User domain crate for Revelation ecosystem"
license = "MIT"
repository = "https://github.com/Revelation-Path/revelation-user"
readme = "README.md"
keywords = ["revelation", "user", "domain", "auth"]
categories = ["data-structures", "web-programming"]

[features]
default = []
db = ["dep:sqlx"]
api = ["masterror/openapi", "dep:utoipa"]
axum = ["dep:axum", "dep:axum-extra", "masterror/axum"]
actix = ["dep:actix-web", "dep:futures-util", "masterror/actix"]

[dependencies]
# Core
bon = "3"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
validator = { version = "0.20", features = ["derive"] }
masterror = "0.26"

# Optional: Database
sqlx = { version = "0.8", features = ["postgres"], optional = true }

# Optional: OpenAPI
utoipa = { version = "5", features = ["uuid", "chrono"], optional = true }

# Optional: Axum
axum = { version = "0.8", optional = true }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"], optional = true }

# Optional: Actix
actix-web = { version = "4", optional = true }
futures-util = { version = "0.3", optional = true }
